Added property ordering
