# _umg_import/generator/src/main/java/io/apicurio/umg/models/concept/EntityModel.java
@@ -2,6 +2,7 @@ package io.apicurio.umg.models.concept;
 
 import java.util.Collection;
 import java.util.LinkedHashSet;
+import java.util.List;
 
 import io.apicurio.umg.models.spec.SpecificationModel;
 import lombok.Data;
@@ -15,5 +16,5 @@ public class EntityModel extends EntityOrTraitModel {
     private final SpecificationModel specModel;
     private final Collection<TraitModel> traits = new LinkedHashSet<>();
     private final boolean root;
-
+    private final List<String> propertyOrder;
 }
